# nvds-plugins-rs

./: .gitignore  Cargo.toml  Makefile  README.md  rust.mk
examples/: Cargo.toml
examples/src/: lib.rs
nvdsmeta-sys/: Cargo.toml  Makefile  build.rs
nvdsmeta-sys/src/: imp.rs  lib.rs  nvlist.rs
scripts/: config_infer_yolov3.txt  setup.sh  single_image_infer.sh
