[package]
name = "examples"
version = "0.1.0"
edition = "2021"
authors = ["Fumiya Fujinaka <uzuna.kf@gmail.com>"]
repository = "https://github.com/uzuna/nvds-plugins-rs"
description = "DeepStreamer plugins"


[dependencies]
anyhow = "1.0"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
once_cell = "1.0"
nvdsmeta-sys = {path = "../nvdsmeta-sys"}
structopt = "0.3.26"
log = "0.4.17"
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.137", features = ["derive"] }
env_logger = "0.9.0"


[[bin]]
name = "nvdsmeta_app"
