[package]
name = "examples"
version = "0.1.0"
edition = "2021"
authors = ["Fumiya Fujinaka <uzuna.kf@gmail.com>"]
repository = "https://github.com/uzuna/nvds-plugins-rs"
description = "DeepStreamer plugins"


[dependencies]
anyhow = "1.0"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19.1" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19" }
nvdsmeta-sys = {path = "../nvdsmeta-sys"}
structopt = "0.3.26"
log = "0.4.17"
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.137", features = ["derive"] }
env_logger = "0.9.0"


[[bin]]
name = "nvdsmeta_app"
